[tool.poetry]
name = "astar"
version = "0.95"
description = "generic A-Star path searching algorithm"
license = "BSD"
authors = ["J Rialland <julien.rialland@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/jrialland/python-astar"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python",
]
packages = [
    { include = "astar" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
sortedcontainers = { version = ">=2.4.0", optional = true }

[tool.poetry.dev-dependencies]
black = ">=23.3.0"
pytest = ">=7.2.0"
mypy = ">=0.991"
twine = ">=4.0.2"

[tool.mypy]
ignore_missing_imports = true
