[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "astar"
version = "0.99"
description = "generic A-Star path searching algorithm"
license = "BSD"
authors = ["J Rialland <julien.rialland@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/jrialland/python-astar"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python",
]
packages = [
    { include = "astar" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
pytest = ">=7.2.0"
mypy = ">=0.991"
twine = ">=4.0.2"
